--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 }
 
 .navigation-container {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 3;
   width: auto;
   display: flex;
   justify-content: center;
@@ -124,6 +128,38 @@
   color: #000;
 }
 
+.category__title {
+  font-size: 30px;
+  text-align: center;
+  margin: 30px;
+}
+.category__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.category__banner {
+  cursor: pointer;
+}
+.category__banner-title {
+  text-align: center;
+}
+.category__banner-img {
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+}
+.category__banner-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1;
+}
+
 .feature-product {
   width: auto;
 }
@@ -133,6 +169,7 @@
   margin: 30px;
 }
 .feature-product__card-container {
+  margin: 0px 100px;
   overflow-x: scroll;
   display: flex;
   gap: 10px;
