--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,10 @@
 // NAVBAR start
 
 .navigation-container {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  z-index: 3;
   width: auto;
   display: flex;
   justify-content: center;
@@ -140,6 +144,42 @@
 
 // HERO end
 
+// CATEGORY LIST start
+
+.category {
+  &__title {
+    font-size: 30px;
+    text-align: center;
+    margin: 30px;
+  }
+  &__list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  &__banner {
+    cursor: pointer;
+    &-title {
+      text-align: center;
+    }
+    &-img {
+      width: 300px;
+      height: 400px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+        object-position: center;
+        aspect-ratio: 1/1;
+      }
+    }
+  }
+}
+
+// CATEGORY LIST end
+
 // FEATURE PRODUCT start
 
 .feature-product {
@@ -150,6 +190,7 @@
     margin: 30px;
   }
   &__card-container {
+    margin: 0px 100px;
     overflow-x: scroll;
     display: flex;
     gap: 10px;
