--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,9 @@
 .category__banner {
   cursor: pointer;
 }
-.category__banner-title {
+.category__banner-title h4 {
+  font-size: 30px;
+  font-weight: 500;
   text-align: center;
 }
 .category__banner-img {
@@ -158,6 +160,188 @@
   -o-object-position: center;
      object-position: center;
   aspect-ratio: 1/1;
+}
+
+.sale-product {
+  margin: 0px 100px;
+  height: 700px;
+}
+.sale-product__title {
+  font-size: 30px;
+  text-align: center;
+  margin: 30px;
+}
+.sale-product__title span {
+  color: red;
+}
+.sale-product__main-container {
+  padding: 20px;
+  display: flex;
+  gap: 20px;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.0470588235);
+  border-radius: 20px;
+}
+.sale-product__container1 {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  width: 50%;
+  height: 100%;
+  background-color: yellow;
+  border-radius: 20px;
+}
+.sale-product__container1 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1;
+  transition: all 0.5s ease;
+}
+.sale-product__container1-overlay {
+  position: absolute;
+  top: 75%;
+  left: 65%;
+}
+.sale-product__container1-overlay p {
+  font-size: 25px;
+  font-weight: 700;
+  color: white;
+}
+.sale-product__container1-overlay p span {
+  color: red;
+}
+.sale-product__container1-overlay button {
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 600;
+  outline: none;
+  border: 3px solid rgba(128, 128, 128, 0.4274509804);
+  border-radius: 5px;
+  background: transparent;
+  transition: all 0.3s ease;
+}
+.sale-product__container1-overlay button:hover {
+  background-color: #000000;
+  color: #fff;
+  cursor: pointer;
+}
+.sale-product__container1:hover img {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.sale-product__container2 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 50%;
+  height: 100%;
+}
+.sale-product__sub-container1 {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 50%;
+  border-radius: 20px;
+}
+.sale-product__sub-container1 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1;
+  transition: all 0.5s ease;
+}
+.sale-product__sub-container1-overlay {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+.sale-product__sub-container1-overlay p {
+  font-size: 25px;
+  font-weight: 700;
+  color: white;
+}
+.sale-product__sub-container1-overlay p span {
+  color: red;
+}
+.sale-product__sub-container1-overlay button {
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 600;
+  outline: none;
+  border: 3px solid rgba(128, 128, 128, 0.4274509804);
+  border-radius: 5px;
+  background: transparent;
+  transition: all 0.3s ease;
+}
+.sale-product__sub-container1-overlay button:hover {
+  background-color: #000000;
+  color: #fff;
+  cursor: pointer;
+}
+.sale-product__sub-container1:hover img {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.sale-product__sub-container2 {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 50%;
+  border-radius: 20px;
+}
+.sale-product__sub-container2 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1;
+  transition: all 0.5s ease;
+}
+.sale-product__sub-container2-overlay {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+.sale-product__sub-container2-overlay p {
+  font-size: 25px;
+  font-weight: 700;
+  color: white;
+}
+.sale-product__sub-container2-overlay p span {
+  color: red;
+}
+.sale-product__sub-container2-overlay button {
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 600;
+  outline: none;
+  border: 3px solid rgba(255, 255, 255, 0.4274509804);
+  border-radius: 5px;
+  background: transparent;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+.sale-product__sub-container2-overlay button:hover {
+  background-color: #000000;
+  color: #fff;
+  cursor: pointer;
+}
+.sale-product__sub-container2:hover img {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .feature-product {
@@ -404,6 +588,21 @@
   .hero__content--button {
     font-size: 15px;
   }
+  .sale-product {
+    margin: 50px;
+    height: auto;
+  }
+  .sale-product__main-container {
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+  }
+  .sale-product__container1 {
+    width: 100%;
+  }
+  .sale-product__container2 {
+    width: 100%;
+  }
   .footer .footer-accordion {
     display: block;
   }
@@ -445,6 +644,32 @@
     font-size: 10px;
   }
   .hero__content--button {
+    font-size: 10px;
+  }
+  .sale-product__container1-overlay p {
+    font-size: 12px;
+  }
+  .sale-product__container1-overlay button {
+    font-size: 10px;
+  }
+  .sale-product__sub-container1-overlay {
+    top: 75%;
+    left: 65%;
+  }
+  .sale-product__sub-container1-overlay p {
+    font-size: 12px;
+  }
+  .sale-product__sub-container1-overlay button {
+    font-size: 10px;
+  }
+  .sale-product__sub-container2-overlay {
+    top: 75%;
+    left: 65%;
+  }
+  .sale-product__sub-container2-overlay p {
+    font-size: 12px;
+  }
+  .sale-product__sub-container2-overlay button {
     font-size: 10px;
   }
   .feature-product__card-container {
