--- a/css/style.scss
+++ b/css/style.scss
@@ -161,7 +161,11 @@
   &__banner {
     cursor: pointer;
     &-title {
-      text-align: center;
+      h4 {
+        font-size: 30px;
+        font-weight: 500;
+        text-align: center;
+      }
     }
     &-img {
       width: 300px;
@@ -179,6 +183,186 @@
 }
 
 // CATEGORY LIST end
+
+// SALE PRODUCTS start
+
+.sale-product {
+  margin: 0px 100px;
+  height: 700px;
+  &__title {
+    font-size: 30px;
+    text-align: center;
+    margin: 30px;
+    span {
+      color: red;
+    }
+  }
+  &__main-container {
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+    height: 100%;
+    background-color: #8080800c;
+    border-radius: 20px;
+  }
+  &__container1 {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    width: 50%;
+    height: 100%;
+    background-color: yellow;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+      object-position: center;
+      aspect-ratio: 1/1;
+      transition: all 0.5s ease;
+    }
+    border-radius: 20px;
+    &-overlay {
+      position: absolute;
+      top: 75%;
+      left: 65%;
+      p {
+        font-size: 25px;
+        font-weight: 700;
+        color: white;
+        span {
+          color: red;
+        }
+      }
+      button {
+        padding: 5px 10px;
+        font-size: 18px;
+        font-weight: 600;
+        outline: none;
+        border: 3px solid #8080806d;
+        border-radius: 5px;
+        background: transparent;
+        transition: all 0.3s ease;
+      }
+      button:hover {
+        background-color: #000000;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+  }
+  &__container1:hover img {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+  &__container2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 50%;
+    height: 100%;
+  }
+  &__sub-container1 {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    border-radius: 20px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+      object-position: center;
+      aspect-ratio: 1/1;
+      transition: all 0.5s ease;
+    }
+    &-overlay {
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      p {
+        font-size: 25px;
+        font-weight: 700;
+        color: white;
+        span {
+          color: red;
+        }
+      }
+      button {
+        padding: 5px 10px;
+        font-size: 18px;
+        font-weight: 600;
+        outline: none;
+        border: 3px solid #8080806d;
+        border-radius: 5px;
+        background: transparent;
+        transition: all 0.3s ease;
+      }
+      button:hover {
+        background-color: #000000;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+  }
+  &__sub-container1:hover img {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+  &__sub-container2 {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    border-radius: 20px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+      object-position: center;
+      aspect-ratio: 1/1;
+      transition: all 0.5s ease;
+    }
+    &-overlay {
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      p {
+        font-size: 25px;
+        font-weight: 700;
+        color: white;
+        span {
+          color: red;
+        }
+      }
+      button {
+        padding: 5px 10px;
+        font-size: 18px;
+        font-weight: 600;
+        outline: none;
+        border: 3px solid #ffffff6d;
+        border-radius: 5px;
+        background: transparent;
+        color: #fff;
+        transition: all 0.3s ease;
+      }
+      button:hover {
+        background-color: #000000;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+  }
+  &__sub-container2:hover img {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
+}
+
+// SALE PRODUCTS end
 
 // FEATURE PRODUCT start
 
@@ -481,6 +665,26 @@
 
   // HERO end
 
+  // SALE PRODUCT start
+
+  .sale-product {
+    margin: 50px;
+    height: auto;
+    &__main-container {
+      flex-direction: column;
+      padding: 10px;
+      gap: 10px;
+    }
+    &__container1 {
+      width: 100%;
+    }
+    &__container2 {
+      width: 100%;
+    }
+  }
+
+  // SALE PRODUCT end
+
   // FEATURE PRODUCT start
 
   // FEATURE PRODUCT end
@@ -557,6 +761,47 @@
   }
 
   // HERO end
+
+  // SALE PRODUCT start
+
+  .sale-product {
+    &__container1 {
+      &-overlay {
+        p {
+          font-size: 12px;
+        }
+        button {
+          font-size: 10px;
+        }
+      }
+    }
+    &__sub-container1 {
+      &-overlay {
+        top: 75%;
+        left: 65%;
+        p {
+          font-size: 12px;
+        }
+        button {
+          font-size: 10px;
+        }
+      }
+    }
+    &__sub-container2 {
+      &-overlay {
+        top: 75%;
+        left: 65%;
+        p {
+          font-size: 12px;
+        }
+        button {
+          font-size: 10px;
+        }
+      }
+    }
+  }
+
+  // SALE PRODUCT end
 
   // FEATURE PRODUCT start
 
