--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,158 @@
   margin: 5px;
 }
 
+.filter {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.105);
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+.filter__table {
+  position: fixed;
+  top: 0;
+  left: -30%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 300px;
+  height: 100vh;
+  padding: 20px;
+  background-color: #fff;
+  overflow-y: scroll;
+  transition: left 0.5s ease;
+}
+.filter__table--title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.filter__table--title h4 {
+  font-size: 25px;
+  font-weight: 500;
+}
+.filter__table--title i {
+  cursor: pointer;
+  font-size: 20px;
+}
+.filter__table--item ul {
+  background-color: rgba(128, 128, 128, 0.1450980392);
+  padding: 10px;
+  line-height: 40px;
+  border-radius: 8px;
+}
+.filter__table--item ul li {
+  list-style: none;
+}
+.filter__table--item ul li label {
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.7803921569);
+  cursor: pointer;
+}
+.filter__table--item ul li input[type=checkbox] {
+  accent-color: #102439;
+}
+.filter__table--item ul li input[type=radio] {
+  accent-color: #102439;
+}
+.filter__table button {
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.8980392157);
+  color: #fff;
+  outline: none;
+  border: none;
+}
+.filter__table button:hover {
+  background-color: #000;
+}
+
+.breadcrumb {
+  padding: 10px;
+}
+.breadcrumb ul {
+  display: flex;
+}
+.breadcrumb ul li {
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.4549019608);
+  list-style: none;
+  font-size: 15px;
+}
+.breadcrumb ul li + li::before {
+  content: ">";
+  margin: 10px;
+}
+
+.products__listing {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 10px 50px;
+}
+.products__listing--title {
+  font-size: 30px;
+  text-align: center;
+  margin: 30px;
+}
+.products__listing--card {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 300px;
+  cursor: pointer;
+}
+.products__listing--card-img {
+  width: 100%;
+  height: 100%;
+}
+.products__listing--card-img img {
+  width: 100%;
+  height: 100%;
+}
+.products__listing--card-title {
+  font-size: 16px;
+}
+.products__listing--card-rating p {
+  font-size: 12px;
+}
+.products__listing--card-rating p i {
+  font-size: 15px;
+  color: gold;
+}
+.products__listing--card--price {
+  display: flex;
+  gap: 10px;
+}
+.products__listing--card--price-selling {
+  font-weight: 700;
+  font-size: 20px;
+}
+.products__listing--card--price-original {
+  font-size: 20px;
+  text-decoration: line-through;
+  color: rgba(0, 0, 0, 0.4941176471);
+  font-weight: 600;
+}
+.products__listing--card--price-off {
+  font-size: 20px;
+  color: red;
+  font-weight: 700;
+}
+.products__listing--card-button button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 10px 20px;
+  background-color: #ed2828;
+  color: #fff;
+  font-weight: 600;
+}
+
 @media (max-width: 1024px) {
   .navigation__logo--desktop {
     display: none;
