--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@
   flex-wrap: wrap;
   padding: 20px 0px;
   margin-top: 40px;
-  border-top: 1px solid rgba(0, 0, 0, 0.244);
+  border-top: 1px solid rgba(0, 0, 0, 0.2431372549);
 }
 .trust > div {
   display: flex;
@@ -534,28 +534,18 @@
   margin: 5px;
 }
 
-.filter {
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 0, 0, 0.105);
-  top: 0;
-  left: 0;
-  z-index: 4;
+.listing {
+  display: flex;
 }
+
 .filter__table {
-  position: fixed;
-  top: 0;
-  left: -30%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 300px;
-  height: 100vh;
   padding: 20px;
   background-color: #fff;
-  overflow-y: scroll;
   transition: left 0.5s ease;
 }
 .filter__table--title {
@@ -568,6 +558,7 @@
   font-weight: 500;
 }
 .filter__table--title i {
+  display: none;
   cursor: pointer;
   font-size: 20px;
 }
@@ -603,49 +594,92 @@
   background-color: #000;
 }
 
-.breadcrumb {
+.product-listing__container {
+  margin: 10px;
+  flex: 1;
+}
+.product-listing__container-header {
+  display: flex;
+  justify-content: space-between;
+}
+.product-listing__container-header-breadcrumb {
   padding: 10px;
 }
-.breadcrumb ul {
+.product-listing__container-header-breadcrumb ul {
   display: flex;
 }
-.breadcrumb ul li {
+.product-listing__container-header-breadcrumb ul li {
   cursor: pointer;
   color: rgba(0, 0, 0, 0.4549019608);
   list-style: none;
   font-size: 15px;
 }
-.breadcrumb ul li + li::before {
+.product-listing__container-header-breadcrumb ul li + li::before {
   content: ">";
   margin: 10px;
+}
+.product-listing__container-header-filter-sort {
+  display: flex;
+  gap: 10px;
+}
+.product-listing__container-header-sort-open li {
+  border: 1px solid rgba(0, 0, 0, 0.3647058824);
+  padding: 10px 15px;
+  list-style: none;
+}
+.product-listing__container-header-sort-open li label {
+  font-size: 15px;
+}
+.product-listing__container-header-sort-open li select {
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+.product-listing__container-header-filter-open {
+  display: none;
+}
+.product-listing__container-header-filter-open button {
+  outline: none;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.462745098);
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 10px 15px;
+  cursor: pointer;
 }
 
 .products__listing {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin: 10px 50px;
+  flex-direction: column;
+  gap: 50px;
+  margin: 20px;
 }
 .products__listing--title {
   font-size: 30px;
-  text-align: center;
   margin: 30px;
 }
 .products__listing--card {
   display: flex;
-  flex-direction: column;
-  gap: 5px;
-  width: 300px;
+  height: 300px;
   cursor: pointer;
 }
 .products__listing--card-img {
-  width: 100%;
+  width: 40%;
   height: 100%;
 }
 .products__listing--card-img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 1/1;
+}
+.products__listing--card-detail {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 60%;
 }
 .products__listing--card-title {
   font-size: 16px;
@@ -676,13 +710,41 @@
   color: red;
   font-weight: 700;
 }
+.products__listing--card-limited-deal p {
+  font-size: 12px;
+  font-weight: 600;
+  background-color: red;
+  color: #fff;
+  padding: 5px 8px;
+  width: 130px;
+}
+.products__listing--card-emi p {
+  color: rgba(0, 0, 0, 0.5254901961);
+}
+.products__listing--card-original-delivery p {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.7019607843);
+}
+.products__listing--card-original-delivery span {
+  color: #000;
+  font-weight: 600;
+}
+.products__listing--card-paid-delivery p {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.7019607843);
+}
+.products__listing--card-paid-delivery span {
+  color: #000;
+  font-weight: 600;
+}
 .products__listing--card-button button {
   cursor: pointer;
   outline: none;
   border: none;
+  border-radius: 40px;
   padding: 10px 20px;
-  background-color: #ed2828;
-  color: #fff;
+  background-color: #f2ff00;
+  color: #000;
   font-weight: 600;
 }
 
@@ -790,6 +852,29 @@
     display: flex;
     font-size: 18px;
   }
+  .filter {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.105);
+    top: 0;
+    left: 0;
+    z-index: 4;
+  }
+  .filter__table {
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    left: -30%;
+    height: 100vh;
+  }
+  .filter__table--title i {
+    display: block;
+  }
+  .product-listing__container-header-filter-open {
+    display: block;
+  }
 }
 @media (max-width: 480px) {
   .hero__content {
@@ -841,5 +926,81 @@
   .trust > div p {
     font-size: 12px;
     margin-left: 5px;
+  }
+  .product-listing__container-header {
+    flex-direction: column;
+  }
+  .product-listing__container-header-sort-open {
+    border: none;
+    outline: none;
+  }
+  .product-listing__container-header-sort-open li {
+    padding: 5px 10px;
+    list-style: none;
+  }
+  .product-listing__container-header-sort-open li label {
+    font-size: 10px;
+  }
+  .product-listing__container-header-filter-open button {
+    font-weight: 600;
+    font-size: 10px;
+    padding: 10px 15px;
+  }
+  .products__listing {
+    gap: 50px;
+  }
+  .products__listing--title {
+    font-size: 20px;
+    margin: 20px;
+  }
+  .products__listing--card {
+    display: flex;
+    height: 200px;
+    gap: 15px;
+  }
+  .products__listing--card-img {
+    width: 40%;
+    height: 100%;
+  }
+  .products__listing--card-img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    aspect-ratio: 1/1;
+  }
+  .products__listing--card-title {
+    font-size: 12px;
+  }
+  .products__listing--card-rating p {
+    font-size: 10px;
+  }
+  .products__listing--card-rating p i {
+    font-size: 10px;
+  }
+  .products__listing--card--price-selling {
+    font-size: 12px;
+  }
+  .products__listing--card--price-original {
+    font-size: 12px;
+  }
+  .products__listing--card--price-off {
+    font-size: 12px;
+  }
+  .products__listing--card-limited-deal p {
+    font-size: 10px;
+    width: 110px;
+  }
+  .products__listing--card-emi p {
+    font-size: 10px;
+  }
+  .products__listing--card-original-delivery p {
+    font-size: 10px;
+  }
+  .products__listing--card-paid-delivery p {
+    font-size: 10px;
+  }
+  .products__listing--card-button button {
+    font-size: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
