--- a/css/style.scss
+++ b/css/style.scss
@@ -519,7 +519,7 @@
   flex-wrap: wrap;
   padding: 20px 0px;
   margin-top: 40px;
-  border-top: 1px solid rgba(0, 0, 0, 0.244);
+  border-top: 1px solid #0000003e;
   > div {
     display: flex;
     align-items: center;
@@ -587,30 +587,19 @@
 
 // --------------------------------LISTING start----------------------
 .listing {
+  display: flex;
 }
 
 // FILTER start
 .filter {
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 0, 0, 0.105);
-  top: 0;
-  left: 0;
-  z-index: 4;
   &__table {
-    position: fixed;
-    top: 0;
-    left: -30%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 300px;
-    height: 100vh;
     padding: 20px;
     background-color: #fff;
-    overflow-y: scroll;
     transition: left 0.5s ease;
     &--title {
       display: flex;
@@ -621,6 +610,7 @@
         font-weight: 500;
       }
       i {
+        display: none;
         cursor: pointer;
         font-size: 20px;
       }
@@ -664,47 +654,95 @@
 // FILTER end
 
 // PRODUCTS LISTING start
-
-.breadcrumb {
-  padding: 10px;
-  ul {
-    display: flex;
-    li {
-      cursor: pointer;
-      color: #00000074;
-      list-style: none;
-      font-size: 15px;
-    }
-    li + li::before {
-      content: ">";
-      margin: 10px;
+// header start
+.product-listing {
+  &__container {
+    margin: 10px;
+    flex: 1;
+    &-header {
+      display: flex;
+      justify-content: space-between;
+      &-breadcrumb {
+        padding: 10px;
+        ul {
+          display: flex;
+          li {
+            cursor: pointer;
+            color: #00000074;
+            list-style: none;
+            font-size: 15px;
+          }
+          li + li::before {
+            content: ">";
+            margin: 10px;
+          }
+        }
+      }
+      &-filter-sort {
+        display: flex;
+        gap: 10px;
+      }
+      &-sort-open {
+        li {
+          border: 1px solid #0000005d;
+          padding: 10px 15px;
+          list-style: none;
+          label {
+            font-size: 15px;
+          }
+          select {
+            background-color: transparent;
+            outline: none;
+            border: none;
+          }
+        }
+      }
+      &-filter-open {
+        display: none;
+        button {
+          outline: none;
+          border: none;
+          background-color: #00000076;
+          color: #fff;
+          font-weight: 600;
+          font-size: 15px;
+          padding: 10px 15px;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
+// header end
+
 .products__listing {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin: 10px 50px;
+  flex-direction: column;
+  gap: 50px;
+  margin: 20px;
   &--title {
     font-size: 30px;
-    text-align: center;
     margin: 30px;
   }
   &--card {
     display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 300px;
+    height: 300px;
     cursor: pointer;
     &-img {
-      width: 100%;
+      width: 40%;
       height: 100%;
       img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
+        aspect-ratio: 1/1;
       }
+    }
+    &-detail {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      width: 60%;
     }
     &-title {
       font-size: 16px;
@@ -737,14 +775,50 @@
         font-weight: 700;
       }
     }
+    &-limited-deal {
+      p {
+        font-size: 12px;
+        font-weight: 600;
+        background-color: red;
+        color: #fff;
+        padding: 5px 8px;
+        width: 130px;
+      }
+    }
+    &-emi {
+      p {
+        color: #00000086;
+      }
+    }
+    &-original-delivery {
+      p {
+        font-weight: 500;
+        color: #000000b3;
+      }
+      span {
+        color: #000;
+        font-weight: 600;
+      }
+    }
+    &-paid-delivery {
+      p {
+        font-weight: 500;
+        color: #000000b3;
+      }
+      span {
+        color: #000;
+        font-weight: 600;
+      }
+    }
     &-button {
       button {
         cursor: pointer;
         outline: none;
         border: none;
+        border-radius: 40px;
         padding: 10px 20px;
-        background-color: #ed2828;
-        color: #fff;
+        background-color: #f2ff00;
+        color: #000;
         font-weight: 600;
       }
     }
@@ -903,6 +977,45 @@
 
   // --------------------------------LISTING start----------------------
 
+  // FILTER start
+  .filter {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.105);
+    top: 0;
+    left: 0;
+    z-index: 4;
+    &__table {
+      overflow-y: scroll;
+      position: fixed;
+      top: 0;
+      left: -30%;
+      height: 100vh;
+      &--title {
+        i {
+          display: block;
+        }
+      }
+    }
+  }
+  // FILTER end
+
+  //PRODUCTS start
+
+  .product-listing {
+    &__container {
+      &-header {
+        &-filter-open {
+          display: block;
+        }
+      }
+    }
+  }
+
+  //PRODUCTS end
+
   // --------------------------------LISTING end----------------------
 }
 
@@ -1003,6 +1116,113 @@
 
   // --------------------------------LISTING start----------------------
 
+  //FILTER start
+
+  //FILTER end
+
+  // PRODUCT LISTING start
+  // header start
+  .product-listing {
+    &__container {
+      &-header {
+        flex-direction: column;
+        &-sort-open {
+          border: none;
+          outline: none;
+          li {
+            padding: 5px 10px;
+            list-style: none;
+            label {
+              font-size: 10px;
+            }
+          }
+        }
+        &-filter-open {
+          button {
+            font-weight: 600;
+            font-size: 10px;
+            padding: 10px 15px;
+          }
+        }
+      }
+    }
+  }
+  // header end
+
+  .products__listing {
+    gap: 50px;
+    &--title {
+      font-size: 20px;
+      margin: 20px;
+    }
+    &--card {
+      display: flex;
+      height: 200px;
+      gap: 15px;
+      &-img {
+        width: 40%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+          aspect-ratio: 1/1;
+        }
+      }
+      &-detail {
+      }
+      &-title {
+        font-size: 12px;
+      }
+      &-rating {
+        p {
+          font-size: 10px;
+          i {
+            font-size: 10px;
+          }
+        }
+      }
+      &--price {
+        &-selling {
+          font-size: 12px;
+        }
+        &-original {
+          font-size: 12px;
+        }
+        &-off {
+          font-size: 12px;
+        }
+      }
+      &-limited-deal {
+        p {
+          font-size: 10px;
+          width: 110px;
+        }
+      }
+      &-emi {
+        p {
+          font-size: 10px;
+        }
+      }
+      &-original-delivery {
+        p {
+          font-size: 10px;
+        }
+      }
+      &-paid-delivery {
+        p {
+          font-size: 10px;
+        }
+      }
+      &-button {
+        button {
+          font-size: 10px;
+        }
+      }
+    }
+  }
+
+  // PRODUCT LISTING end
   // --------------------------------LISTING end----------------------
 }
 
