--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,7 @@
   display: flex;
   flex-direction: column;
   margin: 20px;
+  gap: 20px;
 }
 .cart__title {
   margin: 20px;
@@ -1080,6 +1081,8 @@
   cursor: pointer;
 }
 .cart__summary {
+  align-self: flex-end;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
   width: 300px;
   display: flex;
@@ -1090,29 +1093,152 @@
   font-weight: 400;
   font-size: 20px;
 }
-.cart__summary-details p {
-  font-size: 15px;
-  font-weight: 600;
+.cart__summary-details {
+  display: flex;
+  flex-direction: column;
 }
-.cart__summary-details p span {
-  font-weight: 400;
+.cart__summary-details > div {
+  display: flex;
+  justify-content: space-between;
+}
+.cart__summary-details > div p {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.568627451);
+}
+.cart__summary-details > div span {
+  font-weight: 700;
 }
 .cart__summary-button {
+  width: 100%;
   cursor: pointer;
   padding: 5px 10px;
   outline: none;
   border: none;
   font-size: 18px;
-}
-.cart__summary-button a {
   text-decoration: none;
   color: #fff;
 }
-.cart__summary .checkout {
+.cart__summary .cart-checkout-btn {
   background-color: #be0000;
 }
-.cart__summary .continue {
+.cart__summary .cart-continue-btn {
   background-color: #000;
+}
+
+.checkout {
+  margin: 20px;
+  display: flex;
+  gap: 50px;
+}
+.checkout__shipping-details {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.checkout__shipping-details-information {
+  display: flex;
+  justify-content: space-between;
+}
+.checkout__shipping-details-information--address {
+  font-size: 15px;
+  font-weight: 500;
+}
+.checkout__shipping-details-information--contact span {
+  font-size: 15px;
+  font-style: italic;
+  font-weight: 500;
+}
+.checkout__shipping-details-payment {
+  display: flex;
+  flex-direction: column;
+}
+.checkout__shipping-details-payment--form {
+  display: flex;
+  flex-direction: column;
+}
+.checkout__shipping-details-payment--form .one {
+  display: flex;
+  flex-direction: column;
+}
+.checkout__shipping-details-payment--form .two {
+  display: flex;
+  justify-content: space-between;
+}
+.checkout__shipping-order-summary {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.checkout__shipping-order-summary--orders {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.checkout__shipping-order-summary--orders-item {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+}
+.checkout__shipping-order-summary--orders-img {
+  width: 10%;
+}
+.checkout__shipping-order-summary--orders-img img {
+  width: 100%;
+}
+.checkout__shipping-order-summary--orders-title {
+  width: 40%;
+}
+.checkout__shipping-order-summary--orders-quantity {
+  width: 25%;
+}
+.checkout__shipping-order-summary--orders-quantity div {
+  width: 90px;
+  background-color: rgba(128, 128, 128, 0.2274509804);
+  padding: 5px;
+}
+.checkout__shipping-order-summary--orders-quantity div button {
+  outline: none;
+  border: none;
+  width: 20px;
+  background: transparent;
+}
+.checkout__shipping-order-summary--orders-quantity div input {
+  outline: none;
+  border: none;
+  background: transparent;
+  text-align: center;
+  width: 30px;
+}
+.checkout__shipping-order-summary--orders-total {
+  width: 25%;
+}
+.checkout__shipping-order-summary--orders-total p {
+  font-weight: 600;
+}
+.checkout__shipping-order-summary--price {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+.checkout__shipping-order-summary--price > div {
+  display: flex;
+  justify-content: space-between;
+}
+.checkout__shipping-order-summary--price > div p {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.568627451);
+}
+.checkout__shipping-order-summary--price > div span {
+  font-weight: 700;
 }
 
 @media (max-width: 1024px) {
@@ -1266,6 +1392,15 @@
     width: 100%;
   }
   .detailed-description__item-review {
+    width: 100%;
+  }
+  .checkout {
+    flex-direction: column;
+  }
+  .checkout__shipping-details {
+    width: 100%;
+  }
+  .checkout__shipping-order-summary {
     width: 100%;
   }
 }
@@ -1433,6 +1568,9 @@
     background: #000;
     color: #fff;
     cursor: pointer;
+  }
+  .cart__summary {
+    align-self: flex-start;
   }
   .cart__summary-button {
     font-size: 12px;
