--- a/css/style.css
+++ b/css/style.css
@@ -1001,6 +1001,55 @@
   cursor: pointer;
 }
 
+.related-products__title {
+  margin: 30px;
+  font-size: 30px;
+  text-align: center;
+}
+.related-products__container {
+  margin: 10px;
+}
+.related-products__cards {
+  display: flex;
+  justify-content: center;
+}
+.related-products__card {
+  cursor: pointer;
+  width: 200px;
+}
+.related-products__card-img {
+  padding: 20px;
+  width: 100%;
+}
+.related-products__card-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+  aspect-ratio: 1/1;
+}
+.related-products__card-title {
+  font-size: 15px;
+  font-weight: 500;
+}
+.related-products__card-price {
+  display: flex;
+  gap: 10px;
+}
+.related-products__card-price p {
+  font-size: 12px;
+  font-weight: 700;
+}
+.related-products__card-price .original {
+  text-decoration: line-through;
+  color: rgba(0, 0, 0, 0.5411764706);
+}
+.related-products__card-price .off {
+  color: red;
+}
+
 .cart {
   display: flex;
   flex-direction: column;
@@ -1193,6 +1242,14 @@
 .checkout__shipping-details-payment--cta .edit {
   background-color: #000;
   color: #fff;
+}
+.checkout__shipping-details-payment--footer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.checkout__shipping-details-payment--footer img {
+  width: 100px;
 }
 .checkout__shipping-order-summary {
   width: 50%;
@@ -1420,6 +1477,10 @@
   }
   .detailed-description__item-review {
     width: 100%;
+  }
+  .related-products__cards {
+    flex-wrap: wrap;
+    flex-shrink: 0;
   }
   .checkout {
     flex-direction: column;
