--- a/css/style.scss
+++ b/css/style.scss
@@ -1111,6 +1111,60 @@
 
 //DETAILED DESCRIPTION end
 
+//RELATED PRODUCT start
+
+.related-products {
+  &__title {
+    margin: 30px;
+    font-size: 30px;
+    text-align: center;
+  }
+  &__container {
+    margin: 10px;
+  }
+  &__cards {
+    display: flex;
+    justify-content: center;
+  }
+  &__card {
+    cursor: pointer;
+    width: 200px;
+    &-img {
+      padding: 20px;
+      width: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
+        aspect-ratio: 1/1;
+      }
+    }
+    &-title {
+      font-size: 15px;
+      font-weight: 500;
+    }
+    &-price {
+      display: flex;
+      gap: 10px;
+      // justify-content: space-between;
+      p {
+        font-size: 12px;
+        font-weight: 700;
+      }
+      .original {
+        text-decoration: line-through;
+        color: #0000008a;
+      }
+      .off {
+        color: red;
+      }
+    }
+  }
+}
+
+//RELATED PRODUCT end
+
 // --------------------------------PRODUCT DETAIL end----------------------
 
 // --------------------------------CART PAGE start----------------------
@@ -1315,6 +1369,14 @@
         .edit {
           background-color: #000;
           color: #fff;
+        }
+      }
+      &--footer {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        img {
+          width: 100px;
         }
       }
     }
@@ -1620,6 +1682,17 @@
   }
 
   // PRODUCT DETAILED DESCRIPTION end
+
+  //RELATED PRODUCTS start
+
+  .related-products {
+    &__cards {
+      flex-wrap: wrap;
+      flex-shrink: 0;
+    }
+  }
+
+  //RELATED PRODUCTS end
 
   // --------------------------------PRODUCT DETAIL end----------------------
 
