--- a/css/style.css
+++ b/css/style.css
@@ -1236,7 +1236,7 @@
   cursor: pointer;
 }
 .checkout__shipping-details-payment--cta .pay {
-  background-color: #ec2020;
+  background-color: #503fe7;
   color: #fff;
 }
 .checkout__shipping-details-payment--cta .edit {
