--- a/css/style.scss
+++ b/css/style.scss
@@ -1363,7 +1363,7 @@
           cursor: pointer;
         }
         .pay {
-          background-color: #ec2020;
+          background-color: #503fe7;
           color: #fff;
         }
         .edit {
